--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+
+# mac system file
+.DS_store
+
+# logs
 cnn_minist_model.json
 cnn_minist_weights.h5
 cnn_mnist_history.pkl
@@ -5,3 +10,8 @@ cnn_mnist_history.pkl
 cnn_cifar10_history.pkl
 cnn_cifar10_model.json
 cnn_cifar10_weights.h5
+
+# train / test data
+*.zip
+train*
+test*
