--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 cnn_minist_model.json
 cnn_minist_weights.h5
 cnn_mnist_history.pkl
+
+cnn_cifar10_history.pkl
+cnn_cifar10_model.json
+cnn_cifar10_weights.h5
