描画系の処理を追跡しないように変更

--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,14 @@ __pycache__
 *old*
 *.csv
 
-# data dir
+# data
 *.zip
 *.jpg
 *.jpeg
-dogs_vs_cats_*
-da_concat_*
+*.npz
+
+# display utils
+checker/
 
 # old codes
 zzz_history/
